ecmascript/parser/tests/typescript-errors/class/parameter-properties-binding-patterns/input.ts.stderr
error: Typescript parameter property must be identifer or assignment pattern
 --> $DIR/tests/typescript-errors/class/parameter-properties-binding-patterns/input.ts:2:24
  |
2 |     constructor(public []) {}
  |                        ^^

